use z-index to put stars in background/fix 'opacity' issue

--- a/css/style.css
+++ b/css/style.css
@@ -8098,12 +8098,12 @@ textarea.form-control {
 .ftco-section {
   padding: 7em 0; }
 
-.ftco-bg-dark {
-  background: #3c312e; }
+/* .ftco-bg-dark {
+  background: #3c312e; } */
 
 .ftco-footer {
   font-size: 16px;
-  background: #121212;
+  /* background: #121212; */
   padding: 8em 0; }
   .ftco-footer .ftco-footer-logo {
     text-transform: uppercase;
@@ -8823,5 +8823,6 @@ textarea.form-control {
 .box {
   background-color: #e7ddd1;
   position: fixed;
-  border-radius: 50%
+  border-radius: 50%;
+  z-index: -999;
 }
